k8s/service.yaml
apiVersion: v1
kind: Service

metadata:
  name: sample-nodejs-service

spec:
  selector:
    app: sample-nodejs

  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080

  type: ClusterIP
